app/assets/stylesheets/components/scratchpad.css.scss
.offcanvas-show-btn {
  white-space: nowrap;
  font-size: 16px;
  background-color: var(--d-surface);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-color: var(--d-divider);
  border-bottom: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  position: fixed;
  bottom: 100px;
  left: 100%;
  transform-origin: 0% 100%;
  transform: rotate(270deg);
}

.scratchpad-header {
  color: var(--d-on-primary);
  background-color: var(--d-primary);
  height: var(--d-navbar-height);
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  margin: 0;
  margin-bottom: 5px;
  padding-left: 16px;
  padding-right: 16px;
  align-items: center;
}

.scratchpad-margin {
  // Header has absolute position, simulate its height using margin-top
  margin-top: calc(var(--d-navbar-height));
}

.offcanvas-body {
  padding-top: 0;
  padding-bottom: 0;
  height: calc(100% - var(--d-navbar-height));
  display: flex;
  flex-flow: column;
}

.scratchpad-info {
  margin: var(--d-card-supporting-text-padding);
  font-size: 14px;
  color: var(--d-on-surface-muted);
  flex: 0 1 auto;
}

.scratchpad-body {
  flex: 1 1 auto;
}

.scratchpad-panel {
  overflow: scroll;
  height: 100%;
  padding: var(--d-card-supporting-text-padding);
}

.scratchpad-panel + .scratchpad-panel {
  border-left: 1px solid var(--d-divider);
}


#scratchpad-code-copy-btn {
  color: white;
  background-color: var(--d-blue-gray);
  white-space: nowrap;
}

.scratchpad-content {
  // Allow children to fill up remaining content
  display: flex;
  flex-flow: column;
  height: 100%;
}

// Wrapper around editor provides margin
#scratchpad-editor-wrapper {
  margin-bottom: 20px;

  :focus-visible {
    outline: none;
  }
}

// Wrapper and its child should take up as much space as possible
#scratchpad-editor-wrapper,
#scratchpad-editor-wrapper > div:first-child {
  display: flex;
  flex-flow: column;
  flex: 1 1 auto;
  overflow-y: auto;
}

#scrathcpad-output-wrapper {
  margin-bottom: 10px;
  flex: 0 1 auto;
}

// First child is the output area, limit its size
#scratchpad-output-wrapper > div:first-child {
  max-height: 20vh !important;
  flex: 0 1 auto;
}

#scratchpad-input-wrapper {
  flex: 0 1 auto;
}

#scratchpad-offcanvas.show {
  @include shadow-z3;
}

/* stylelint-disable selector-class-pattern */
.tailwind ._tw-border-gray-200 {
  border-color: var(--d-divider) !important;
}

.tailwind :is(._tw-dark .dark\:_tw-border-dark-mode-content) {
  border-color: var(--d-divider) !important;
}

.tailwind * {
  border-color: var(--d-divider) !important;
}
/* stylelint-enable selector-class-pattern */

/* stylelint-disable selector-id-pattern */
#__papyros-code-input-area {
  background-color: var(--d-code-bg) !important;
  color: var(--d-on-background);
  caret-color: var(--d-secondary);
}
/* stylelint-enable selector-id-pattern */

#scratchpad-panel-wrapper {
  border-bottom: 0 !important;
}

